--- a/PegasusExportPlugin/PegasusExportPlugin.csproj
+++ b/PegasusExportPlugin/PegasusExportPlugin.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\LaunchBox\Plugins\</OutputPath>
+    <OutputPath>..\..\..\..\..\LaunchBox\Plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -29,6 +29,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -42,10 +45,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Unbroken">
-      <HintPath>..\..\..\..\LaunchBox\Metadata\Unbroken.dll</HintPath>
+      <HintPath>..\..\..\..\..\LaunchBox\Metadata\Unbroken.dll</HintPath>
     </Reference>
     <Reference Include="Unbroken.LaunchBox">
-      <HintPath>..\..\..\..\LaunchBox\Metadata\Unbroken.LaunchBox.dll</HintPath>
+      <HintPath>..\..\..\..\..\LaunchBox\Metadata\Unbroken.LaunchBox.dll</HintPath>
     </Reference>
     <Reference Include="Unbroken.LaunchBox.Plugins">
       <HintPath>..\..\..\..\LaunchBox\Metadata\Unbroken.LaunchBox.Plugins.dll</HintPath>
@@ -58,6 +61,14 @@
     <Compile Include="frmPegasusExport.Designer.cs">
       <DependentUpon>frmPegasusExport.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSettings.Designer.cs">
+      <DependentUpon>frmSettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Pegasus\PegasusImage.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -68,6 +79,9 @@
   <ItemGroup>
     <EmbeddedResource Include="frmPegasusExport.resx">
       <DependentUpon>frmPegasusExport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSettings.resx">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,6 +96,9 @@
     <Content Include="img\img1.JPG" />
     <Content Include="img\img2.JPG" />
     <Content Include="img\img3.JPG" />
+    <Content Include="translationTable.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
