--- a/PegasusExportPlugin/PegasusExportPlugin.csproj
+++ b/PegasusExportPlugin/PegasusExportPlugin.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\LaunchBox\Plugins\</OutputPath>
+    <OutputPath>..\..\..\..\LaunchBox\Plugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -45,10 +45,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Unbroken">
-      <HintPath>..\..\..\..\..\LaunchBox\Metadata\Unbroken.dll</HintPath>
+      <HintPath>..\..\..\..\LaunchBox\Metadata\Unbroken.dll</HintPath>
     </Reference>
     <Reference Include="Unbroken.LaunchBox.Plugins">
-      <HintPath>..\..\..\..\..\LaunchBox\Metadata\Unbroken.LaunchBox.Plugins.dll</HintPath>
+      <HintPath>..\..\..\..\LaunchBox\Metadata\Unbroken.LaunchBox.Plugins.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -56,6 +56,7 @@
     <Compile Include="Controls\DataGridViewCheckBoxColumnHeaderCellEventArgs.cs" />
     <Compile Include="Controls\DataGridViewHeaderCheckBoxColumn.cs" />
     <Compile Include="Controls\HeaderCheckBoxBehaviour.cs" />
+    <Compile Include="Extensions\String.cs" />
     <Compile Include="frmPegasusExport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +71,7 @@
     </Compile>
     <Compile Include="Launchbox\ImageDetail.cs" />
     <Compile Include="Launchbox\PlatformSetting.cs" />
+    <Compile Include="ProgramEntry.cs" />
     <Compile Include="Pegasus\PegasusAssetType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
