--- a/PegasusExportPlugin/PegasusExportPlugin.csproj
+++ b/PegasusExportPlugin/PegasusExportPlugin.csproj
@@ -48,13 +48,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Unbroken">
+    <Reference Include="Unbroken, Version=11.8.0.0, Culture=neutral, PublicKeyToken=97d6238f04304129, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\LaunchBox\Core\Unbroken.dll</HintPath>
     </Reference>
-    <Reference Include="Unbroken.LaunchBox">
+    <Reference Include="Unbroken.LaunchBox, Version=11.8.0.0, Culture=neutral, PublicKeyToken=97d6238f04304129, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\LaunchBox\Core\Unbroken.LaunchBox.dll</HintPath>
     </Reference>
-    <Reference Include="Unbroken.LaunchBox.Plugins">
+    <Reference Include="Unbroken.LaunchBox.Plugins, Version=11.8.0.0, Culture=neutral, PublicKeyToken=558191e84f56affc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\LaunchBox\Core\Unbroken.LaunchBox.Plugins.dll</HintPath>
     </Reference>
   </ItemGroup>
